Update TranslatableKeyManager.java